with-istio/httpbin/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels: 
    app: httpbin    
#  namespace: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
#              hostPort: 80
#          resources:
#            limits:
#              memory: "128Mi"
#              cpu: "500m"
