with-istio/httpbin/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
#  namespace: api
spec:
  selector:
    app: httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
#  type: NodePort
#  type: LoadBalancer
