with-istio/httpbin/4-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
#  namespace: api
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
#        - '*'
        - 'httpbin.dev'
      port:
        name: httpbin-dev
        number: 80        
        protocol: HTTP
