with-istio/httpbin/5-istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
#  namespace: api
spec:
  hosts:
    - 'httpbin.dev'
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: httpbin.default.svc.cluster.local
          port:
            number: 80
